syntax = "proto3";

option csharp_namespace = "ServiceUpdate1.GrpcServer";

package greet;

service UpdateService {
  rpc GetLatestVersion (Empty1) returns (VersionInfo1);
  // Optional: Add a DownloadUpdate method if the server provides direct download
  // rpc DownloadUpdate (VersionInfo) returns (UpdatePackage);
  rpc Subscribe (SubscribeRequest) returns (SubscribeResponse);

}

message Empty1 {}

message VersionInfo1 {
  string version = 1;
  string downloadUrl = 2; // Optional: Download URL if not directly provided
}

message UpdatePackage {
  // Define the format of the update package (e.g., bytes)
  bytes content = 1;
}

message SubscribeRequest {
  string clientName = 1;
  string clientUrl = 2; 
  string serviceName=3;
}

message SubscribeResponse {
  bool subscribed = 1;
}